--- a/assets/css/page.less
+++ b/assets/css/page.less
@@ -45,7 +45,6 @@
   &.last {
     margin-right: 0px
   }
-
 }
 .one-half {
   width: 460px
@@ -69,6 +68,20 @@
   border-top: 1px solid #e1e1e1;
 }
 
+#content-main {
+  width: @content-width;
+  float: left;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+#content-side {
+  width: @sidebar-width;
+  float: left;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  margin-right: 0px;
+}
 
 #content h1 {
   margin-bottom: 30px;
