--- a/assets/css/variable.less
+++ b/assets/css/variable.less
@@ -16,8 +16,11 @@
 
 @page-width: 1020px;
 @page-width-inner: @page-width - 80px;
-@article-page-width: 700px;
-@article-width: 555px;
+@content-width: 740px;
+@sidebar-width: @page-width-inner - @content-width - 20px;
 @article-meta-width: 125px;
+@article-width: @content-width - @article-meta-width - 20px;
 
 @article-meta-font-size: 12px;
+
+@bg-image: '../images/main-bg2.jpg';
