--- a/views/post.jade
+++ b/views/post.jade
@@ -10,17 +10,19 @@ block content
   mixin post(post, false)
   - if (session.user)
     a(href='/admin/edit/' + post.guid)= label('Edit post')
-  #disqus_thread
+  - if (!post.commentDisabled)
+    #disqus_thread
 
 block scripts
-  script(type='text/javascript')
-    var disqus_shortname = '#{config.disqus.shortname}';
-    var disqus_identifier = '#{post.guid}';
-    var disqus_url = location.protocol + '//' + location.host + '/' + '#{post.id}';
-    var disqus_title = '#{post.title}';
-    var disqus_developer = #{config.disqus.developer};
-    (function() {
-    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-    dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
+  - if (!post.commentDisabled)
+    script(type='text/javascript')
+      var disqus_shortname = '#{config.disqus.shortname}';
+      var disqus_identifier = '#{post.guid}';
+      var disqus_url = location.protocol + '//' + location.host + '/' + '#{post.id}';
+      var disqus_title = '#{post.title}';
+      var disqus_developer = #{config.disqus.developer};
+      (function() {
+      var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+      dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+      })();
