--- a/assets/css/page.less
+++ b/assets/css/page.less
@@ -102,6 +102,7 @@
   float: left;
   margin: 10px 0 0 0;
   color: @article-font-color;
+  width: 100%;
   a {
     color: @link-color;
     &:hover {
