Prettify content (justify & open sans)

--- a/assets/css/typography.less
+++ b/assets/css/typography.less
@@ -5,6 +5,13 @@
   src: local('Dosis Regular'), local('Dosis-Regular'), url("../font/Dosis.woff") format('woff');
 }
 
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans'), local('OpenSans'), url("../font/OpenSans.woff") format('woff');
+}
+
 body {
   background: #FFF;
   color: #898989;
