--- a/assets/css/zhs.less
+++ b/assets/css/zhs.less
@@ -1,7 +1,7 @@
-@import "variable";
+@import 'variable';
 .entry-body {
-  font-family: "Helvetica Neue", 'Arial', 'Verdana', 'Hiragino Sans GB', 'STHeiti', 'SimSun', sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', 'Arial', 'Verdana', 'Hiragino Sans GB', 'STHeiti', 'SimSun', sans-serif;
   h1,h2,h3,h4,h5,h6 {
-    font-family: 'Dosis', "Helvetica Neue", 'Arial', 'Verdana', 'Songti SC', 'STSong', 'SimSun', serif;
+    font-family: 'Dosis', 'Helvetica Neue', 'Arial', 'Verdana', 'Songti SC', 'STSong', 'SimSun', serif;
   }
 }
