--- a/assets/css/page.less
+++ b/assets/css/page.less
@@ -103,6 +103,7 @@
   margin: 10px 0 0 0;
   color: @article-font-color;
   width: 100%;
+  text-align: justify;
   a {
     color: @link-color;
     &:hover {
