--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -2,7 +2,7 @@ mixin header()
   header#header.clearfix(role="banner")
     hgroup#logo-wrapper
       h1
-        a#logo(href=langLink('/'), id='index_link')
+        a#logo(href=langLink('/'))
           img(src="/images/logo.png", title=config.site.title)
     #navigation-wrapper.clearfix
       nav#main-navigation.main-menu
