--- a/views/admin/layout.jade
+++ b/views/admin/layout.jade
@@ -1,4 +1,4 @@
-doctype 5
+doctype html
 html
   head
     block title
@@ -10,7 +10,7 @@ html
         header#header.clearfix(role="banner")
           hgroup#logo-wrapper
             h1
-              a#logo(href='/', id='index_link')
+              a#logo(href='/')
                 img(src="/images/logo.png")
           #navigation-wrapper.clearfix
             nav#main-navigation.main-menu
