Upgrade logo to retina resolution

--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -3,7 +3,7 @@ mixin header()
     hgroup#logo-wrapper
       h1
         a#logo(href=langLink('/'))
-          img(src="/images/logo.png", title=config.site.title)
+          img(src="/images/logo.png", title=config.site.title, width="250", height="30")
     #navigation-wrapper.clearfix
       nav#main-navigation.main-menu
         ul#menu-top-menu.sf-menu
