--- a/views/admin/layout.jade
+++ b/views/admin/layout.jade
@@ -11,7 +11,7 @@ html
           hgroup#logo-wrapper
             h1
               a#logo(href='/')
-                img(src="/images/logo.png")
+                img(src="/images/logo.png", width="250", height="30")
           #navigation-wrapper.clearfix
             nav#main-navigation.main-menu
               ul#menu-top-menu.sf-menu
