Upgrade all social link icons

--- a/assets/css/header.less
+++ b/assets/css/header.less
@@ -101,13 +101,16 @@ ul#social-links {
       display: block;
     }
     a.facebook {
-      background: url("../images/icons/facebook.png") 50% 50% no-repeat
+      background: url("../images/icons/facebook.png") 50% 50% no-repeat;
+      background-size: 20px 20px;
     }
     a.twitter {
-      background: url("../images/icons/twitter.png") 50% 50% no-repeat
+      background: url("../images/icons/twitter.png") 50% 50% no-repeat;
+      background-size: 20px 20px;
     }
     a.google {
-      background: url("../images/icons/google.png") 50% 50% no-repeat
+      background: url("../images/icons/google.png") 50% 50% no-repeat;
+      background-size: 20px 20px;
     }
     a.dribbble {
       background: url("../images/icons/dribbble.png") 50% 50% no-repeat
@@ -119,25 +122,31 @@ ul#social-links {
       background: url("../images/icons/skype.png") 50% 50% no-repeat
     }
     a.rss {
-      background: url("../images/icons/rss.png") 50% 50% no-repeat
+      background: url("../images/icons/rss.png") 50% 50% no-repeat;
+      background-size: 20px 20px;
     }
     a.linkedin {
-      background: url("../images/icons/linkedin.png") 50% 50% no-repeat
+      background: url("../images/icons/linkedin.png") 50% 50% no-repeat;
+      background-size: 20px 20px;
     }
     a.pinterest {
       background: url("../images/icons/pinterest.png") 50% 50% no-repeat
     }
     a.github {
-      background: url("../images/icons/github.png") 50% 50% no-repeat
+      background: url("../images/icons/github.png") 50% 50% no-repeat;
+      background-size: 20px 20px;
     }
     a.renren {
-      background: url("../images/icons/renren.png") 50% 50% no-repeat
+      background: url("../images/icons/renren.png") 50% 50% no-repeat;
+      background-size: 20px 20px;
     }
     a.weibo {
-      background: url("../images/icons/weibo.png") 50% 50% no-repeat
+      background: url("../images/icons/weibo.png") 50% 50% no-repeat;
+      background-size: 20px 20px;
     }
     a.douban {
-      background: url("../images/icons/douban.png") 50% 50% no-repeat
+      background: url("../images/icons/douban.png") 50% 50% no-repeat;
+      background-size: 20px 20px;
     }
   }
 
