--- a/assets/css/variable.less
+++ b/assets/css/variable.less
@@ -1,5 +1,5 @@
 @body-font-family: 'Open Sans', 'Helvetica Neue', 'Arial', 'Verdana', 'Lantinghei TC', 'Hiragino Kaku Gothic ProN', 'Heiti TC', 'MS Mincho', 'MingLiU', sans-serif;
-@header-font-family: 'Dosis', 'Helvetica Neue', 'Arial', 'Verdana', 'Hiragino Mincho ProN', 'LiSong Pro Light', 'Songti TC', 'MS Mincho', 'MingLiU', serif;
+@header-font-family: 'Dosis', 'Helvetica Neue', 'Arial', 'Verdana', 'H-BuMing', 'FZNew XiuLi-Z11', 'Hiragino Mincho ProN', 'YuMincho', 'Adobe Ming Std', 'LiSong Pro Light', 'Songti TC', 'PMingLiU', serif;
 @monospace: Courier, 'Liberation Mono', Consolas, monospace;
 
 @white: #FFF;
