--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,5 +26,5 @@ html
     != js('script')
     block scripts
     script(data-no-instant).
-      InstantClick.init(50);
+      //InstantClick.init(50);
     != config.pageTail
